Add materialfx, chang to JDK 17