@@ -12,7 +12,7 @@ plugins {
 }
 
 javafx {
-    version = "11"
+    version = "17"
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
@@ -25,6 +25,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'io.github.palexdev:materialfx:11.13.5'
     implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation 'org.openjfx:javafx-controls:18.0.1'
     implementation 'org.openjfx:javafx-fxml:18.0.1'
@@ -36,34 +37,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
-run {
-    applicationDefaultJvmArgs += [
-            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
-            "--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED",
-            "--add-opens", "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
-            "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-            "--add-opens", "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-            "--add-opens", "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-            "--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
-            "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-            "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
-            "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
-            "--add-exports", "javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
-            "--add-exports", "javafx.base/com.sun.javafx.binding=com.jfoenix",
-            "--add-exports", "javafx.base/com.sun.javafx.event=com.jfoenix",
-            "--add-exports", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
-            "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix",
-            "--add-exports", "javafx.graphics/com.sun.javafx.scene.text=com.jfoenix",
-            "--add-exports", "javafx.graphics/com.sun.javafx.geom=com.jfoenix",
-            "--add-exports", "javafx.graphics/com.sun.javafx.util=com.jfoenix",
-            "--add-exports", "javafx.graphics/com.sun.javafx.scene.traversal=com.jfoenix"
-    ]
-}
-
 group = 'cn.gaein.video'
 version = '1.0-SNAPSHOT'
 description = 'VideoTool'
-java.sourceCompatibility = JavaVersion.VERSION_11
+java.sourceCompatibility = JavaVersion.VERSION_17
 
 publishing {
     publications {
